Fix grid layout issues

--- a/src/styles/base/grid.scss
+++ b/src/styles/base/grid.scss
@@ -33,7 +33,7 @@
   }
 
   &__column {
-    @include column-generate(true);
+    width: 100%;
 
     &.-noPad {
       padding-right: 0;
